src/Components/EnergyCalculator/Footer/Footer.css
.cesn-footer-content {
  display: grid;
  grid-template-columns: 1fr auto;
  grid-template-rows: auto auto;
  grid-template-areas:
    'branding links'
    'branding copyright';
  max-width: var(--main-max-width);
  margin: auto;
  padding: 1.75rem 2rem 1.5rem;
  column-gap: 1rem;
  row-gap: 0.375rem;
}

.cesn-footer-branding {
  grid-area: branding;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 0.5rem;
  align-self: center;
}

.cesn-footer-dora-logo {
  max-height: 2.75rem;
  width: auto;
}

.energy-calculator-footer-logo-container {
  display: flex;
  align-items: center;
  gap: 0.75rem;
}

.energy-calculator-footer-logo-container img {
  margin: 0;
  padding: 0;
  max-height: 1.5rem;
  width: auto;
  height: auto;
}

.cesn-footer-links {
  grid-area: links;
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  gap: 0.625rem;
}

.cesn-footer-links .policy-link {
  margin: 0;
  font-size: 0.75rem;
  text-align: right;
}

.cesn-footer-copyright {
  grid-area: copyright;
  color: #ffffff;
  font-family: var(--font-body);
  font-size: 0.625rem;
  margin: 0;
  text-align: right;
  align-self: end;
}

@media (max-width: 767px) {
  .cesn-footer-content {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: 0.75rem;
    padding: 0.75rem 1rem;
  }

  .cesn-footer-links {
    order: -2;
    align-items: flex-start;
  }

  .cesn-footer-links .policy-link {
    text-align: left;
    font-size: 0.875rem;
  }

  .cesn-footer-branding {
    order: -1;
    margin-top: 2rem;
  }

  .cesn-footer-links {
    margin-top: 0.5rem;
  }

  .cesn-footer-copyright {
    order: 0;
    text-align: left;
    align-self: flex-start;
    margin-top: 0.5rem;
  }
}

